--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 
   <section id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="images/images/images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="images/images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
